it's left only to add some conclusions about methods

--- a/Dipl/text/dipl.tex
+++ b/Dipl/text/dipl.tex
@@ -1,4 +1,4 @@
-\documentclass[14pt]{extarticle}
+\documentclass[14pt,a4paper,titlepage]{extarticle}
 \usepackage[T2A,T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[ukrainian]{babel}
@@ -11,16 +11,48 @@
 
 \begin{document}
 
-%Text in English
-%
-%\begin{otherlanguage*}{ukrainian}
-%in secntion
-%\end{otherlanguage*}
-%A word and \Huge{another}% \foreignlanguage{ukrainian}{слово}
+\begin{titlepage}
+\setstretch{1}
+\begin{center}
+Міністерство освіти і науки України \\
+Київський національний університет імені Тараса Шевченка \\
+Кафедра обчислювальної математики факультету кібернетики
+
+\vfill
+
+\Large Випускна кваліфікаційна робота бакалавра \\
+на тему \\
+\LARGE Числові методи аналізу ДНК
+\end{center}
+
+\vfill
+
+\begin{flushright}
+Виконав студент 4-го курсу \\
+Товт Аттіла Аттілович \\[1cm]
+
+Науковий керівник \\
+доктор фіз.-мат. наук, професор \\
+Клюшин Дмитро Анатолійович
+\end{flushright}
+
+\center Київ 2015
+
+
+\end{titlepage}
+
  \tableofcontents
  \newpage
 \section{Вступ}
-З розвитком біотехнологій все більше зразків послідовностей ДНК вдається отримати. Кількість послідовностей росла екпотенціально на протязі минулих двадцяти років. Полідовність ДНК складається з чотирьох різних нуклеотидів: аденін(A), цитозин(C), гуанін(G) і тимін(T). Вона містить багато біологічної, фізіологічної і хімічної інформації, через що стало дуже важливо аналізувати генетичні послідовності. Було запропоновано багато обчислювальниз і статистичних методів для порівняння біологічних послідовностей. Незважаючи на це, тема порівняння послідовностей залишається актуальною і на цей час. Існуючі методи можна розділити на групуючі і не групуючі. \par
+З розвитком біотехнологій все більше зразків послідовностей ДНК вдається
+отримати. Кількість послідовностей росла експонентно на протязі минулих
+двадцяти років. Послідовність ДНК складається з чотирьох різних нуклеотидів:
+аденін(A), цитозин(C), гуанін(G) і тимін(T). Вона містить багато біологічної,
+фізіологічної й хімічної інформації, через що стало дуже важливо аналізувати
+генетичні послідовності. Було запропоновано багато обчислювальних і
+статистичних методів для порівняння біологічних послідовностей. Не зважаючи на
+це, тема порівняння послідовностей залишається актуальною і на цей час. Існуючі
+методи можна розділити на групуючі і не групуючі. \par
 Групуючі методи використовують динамічне програмування, за допомогою регресії знаходять оптимальне групування за допомогою присвоєння рахунку до різних можливих групувань і вибирають групування з найбільшим рахунком. \par
 Серед всіх існуючих не групуючих методів порівняння біологічних послідовностей, графічне представлення забезпечує простий спосіб перегляду, сортування та порівняння генних структур. Мета графічного подання це відображення послідовності ДНК або білка графічно, так що ми можемо легко візуально визначити наскільки схожі або наскільки відрізняються послідовності. Звичайно, тільки візуального порівняння послідовностей недостатньо для подальшого дослідження. Потрібний більш точний спосіб порівняння. \par
 У даній роботі будуть розглянуті основні методи представлення послідовності ДНК у числовому вигляді, а також спроба застосувати $p$-статистики як міри близькості між ними. Чисельні послідовності, які отримуються за допомогою одного з описаних нижче алгоритмів розглядаються як вибірки деякого неперервного розподілу. Далі ми використовуємо $p$-статистики, як міри близькості між розподілами.
@@ -66,12 +98,12 @@ after end axis/.code={
 \caption{Графічне представлення послідовності ATGCTGCTGA}
 \label{fig:1}
 \end{figure}
-На Рис. \ref{fig:1} показано графічне представлення ДНК послідовності "ATGCTGCTGA". Таким чином ми отримуємо взаємнооднозначну відповідність між послідовність нуклеотидів і отриманими точками.\par
+На Рис. \ref{fig:1} показано графічне представлення ДНК послідовності "ATGCTGCTGA". Таким чином ми отримуємо взаємно однозначну відповідність між послідовність нуклеотидів і отриманими точками.\par
 Після цього у відповідність послідовності ДНК довжини $n$, ставиться у відповідність розподіл ймовірностей $(p_1,p_2,...,p_n)$,
 \[{x_i-\overrightarrow{y_i} \over{{1\over2}n(n+1)-y_n}},\]
-де $(x_i,y_i)$ відповідає позиції $i$-того нуклиотиду на графіку ДНК, $\overrightarrow{y_i}$ відповідає вибору $y$-координати при $i$-тому нуклиотиді у графічному представленні. Далі у цій статті доводиться, що це дійсно буде дискретним розподілом ймовірностей, а далі використовується розбіжність Кульбака-Лейблера або відносна ентропія.\par
+де $(x_i,y_i)$ відповідає позиції $i$-того нуклеотиду на графіку ДНК, $\overrightarrow{y_i}$ відповідає вибору $y$-координати при $i$-тому нуклеотиді у графічному представленні. Далі у цій статті доводиться, що це дійсно буде дискретним розподілом ймовірностей, а далі використовується розбіжність Кульбака-Лейблера або відносна ентропія.\par
 
-У \cite{l2} описується метод графічного представлення послідовностей ДНК. Тут використовуються блукання у $2D$-просторі. Починають з точки $(0,0)$. Потім, в залежності від послідовності рухаємося у одному з чотирьох напрямків. Напрямки співвідносяться з нуклеотидами наступним чином: A=$(-1,0)$, G=$(1,0)$, C=$(0,1)$, T=$(0,-1)$. Зрозуміло, що блукаючи таким чином, точки будуть повторюватися, тому якщо ми потрапили в точку $m$ раз, ми присвоюємо їй вагу $m$. Для порівняння ДНК використовуються характеристики отриманих точок, такі як ценрт масс і тензори моменту інерції.\par
+У \cite{l2} описується метод графічного представлення послідовностей ДНК. Тут використовуються блукання у $2D$-просторі. Починають з точки $(0,0)$. Потім, в залежності від послідовності рухаємося у одному з чотирьох напрямків. Напрямки співвідносяться з нуклеотидами наступним чином: A=$(-1,0)$, G=$(1,0)$, C=$(0,1)$, T=$(0,-1)$. Зрозуміло, що блукаючи таким чином, точки будуть повторюватися, тому якщо ми потрапили в точку $m$ раз, ми присвоюємо їй вагу $m$. Для порівняння ДНК використовуються характеристики отриманих точок, такі як центр мас і тензори моменту інерції.\par
 
 \begin{figure}[h!]
 \begin{center}
@@ -111,8 +143,20 @@ after end axis/.code={
 \label{fig:f2}
 \end{figure}
 
-У \cite{l3} використовуються нова область фізики, відома як, "нелінійна динаміка", "хаотичні динамічні системи", або просто "хаос". Насправді, ця ітеративна процедура з’вилася у статистичній механіці, зокрема в теорії хаосу.
-Простір можна розглядати як безперервну систему посилань, в якій всі можливі послідовності будь-якої довжини займають унікальне положення. Позиція отримується за допомогою чотирьох можливих нуклеотидів, які розглядаються як точки на квадраті зі стороною 1. Оскільки, формально генетичну послідовнясть можна розглядати, як рядок складений з чотирьох літер A, C, G і T, то наступні точки ставляться у відповідність чотирьом нуклуотидам: A=$(0,0)$, G=$(1,1)$, C=$(0,1)$, T=$(1,0)$. Координати послідовності рахуються ітеративно, рухаючись на половину відстані між попередньою позицією і точкою квадрата, якій відповідає наступний нуклеотид у напрямку цієї точки. Наприклад, якщо G наступний нуклеотид, то наступна точка буде по середині відрізка, що з’єднує попередню точку і $(1,1)$. Ітеративну процедуру можна задати наступним чином:
+У \cite{l3} використовуються нова область фізики, відома як, "нелінійна
+динаміка", "хаотичні динамічні системи", або просто "хаос". Насправді, ця
+ітеративна процедура з’явилася у статистичній механіці, зокрема в теорії хаосу.
+Простір можна розглядати як безперервну систему посилань, в якій всі можливі
+послідовності будь-якої довжини займають унікальне положення. Позиція
+отримується за допомогою чотирьох можливих нуклеотидів, які розглядаються як
+точки на квадраті зі стороною 1. Оскільки, формально генетичну послідовність
+можна розглядати, як рядок складений з чотирьох літер A, C, G і T, то наступні
+точки ставляться у відповідність чотирьом нуклеотидам: A=$(0,0)$, G=$(1,1)$,
+C=$(0,1)$, T=$(1,0)$. Координати послідовності рахуються ітеративно, рухаючись
+на половину відстані між попередньою позицією і точкою квадрата, якій
+відповідає наступний нуклеотид у напрямку цієї точки. Наприклад, якщо G
+наступний нуклеотид, то наступна точка буде по середині відрізка, що з’єднує
+попередню точку і $(1,1)$. Ітеративну процедуру можна задати наступним чином:
 \[p_i = p_{i-1}-0.5(p_{i-1}-g_i)\]
 \[i=1,...,n; p_0=(0.5,0.5),\]
 де $g_i$ - координати, що відповідають $i$-тому нуклеотиду, $n$ - довжина послідовності ДНК. На Рис. \ref{fig:f2} показано ламану утворену точками $p_i$ для послідовності "ATGCTGCTGA".\par
@@ -120,16 +164,31 @@ after end axis/.code={
 \[z_i = x_i + y_i,\]
 де $x_i$, $y_i$ це $x$-координата і $y$-координата точки $p_i$. Далі розглядають чисельні характеристики послідовності $z_i$, зокрема середнє, часткове середнє, стандартне відхилення.
 
-У \cite{l4} представленні методи кодування ДНК послідовностей у одновирних, двомимірних і тривимірних просторах. Основна ідея така сама, як в ітеративній процедурі описаній у \cite{l3}. У $2D$-просторі алгоритми співпадають. Відмінність тривимірного простору у тому, що тут нуклеотидам ставляться у відподність точки, що є вершинами тетраедра, а у одновимірному просторі нуклеотидам T,G ставиться у відповідність $1$, а A,C ставиться у відповідність $-1$.
+У \cite{l4} представленні методи кодування ДНК послідовностей у одновимірних,
+двовимірних і тривимірних просторах. Основна ідея така сама, як в ітеративній
+процедурі описаній у \cite{l3}. У $2D$-просторі алгоритми збігаються.
+Відмінність тривимірного простору у тому, що тут нуклеотидам ставляться у
+відповідність точки, що є вершинами тетраедра, а у одновимірному просторі
+нуклеотидам T, G ставиться у відповідність $1$, а A, C ставиться у відповідність
+$-1$.
 
-У \cite{l5} вводиться поняття $p$-статистики, як міри близькості між неперервними розподілами. У \cite{l6} це поняття розширюється на багатовимірні розподіли, а у \cite{l7} вводиться модифікована $p$-статистика, яку можна застосовувати до вибірок з повтореннями.
+У \cite{l5} вводиться поняття $p$-статистики, як міри близькості між
+неперервними розподілами. У \cite{l6} це поняття розширюється на багатовимірні
+розподіли, а у \cite{l7} вводиться модифікована $p$-статистика, яку можна
+застосовувати до вибірок з повтореннями.
 
 \newpage
 \section{Постановка задачі}
-Використовуючи відомі алгоритми числового представлення послідовності ДНК, знайти такі, які допускають використання $p$-статистик. Перевірити доцільність застосування $p$-статистик до знайдених алгоритмів шляхом порівняння за допомою них послідовностей ДНК різних видів. Послідовності ДНК можна взяти з ГенБанку(www.ncbi.nlm.nih.gov/genbank/).
+Використовуючи відомі алгоритми числового представлення послідовності ДНК, знайти такі, які допускають використання $p$-статистик. Перевірити доцільність застосування $p$-статистик до знайдених алгоритмів шляхом порівняння за допомогою них послідовностей ДНК різних видів. Послідовності ДНК можна взяти з ГенБанку(www.ncbi.nlm.nih.gov/genbank/).
 
 \section{Алгоритм розв’язання}
-Тут розглядаються 7 різних методів числового подання ДНК.
+Подаємо відрізок ДНК у вигляді числової послідовності, за допомогою одного з
+методів описаного нижче. Вважаємо, що отримана числова послідовність є вибіркою,
+якогось неперервного розподілу і, використовуючи $p$-статистики, порівнюємо
+вибірки отримані з геномних послідовностей різних видів.
+
+\subsection{Методи числового подання ДНК}
+
 \paragraph{Метод 1}
 Кожному нуклеотиду A, G, C, T ставимо у відповідність вектори $(1,0.8)$, $(1,0.6)$, $(1,0.4)$, $(1,0.2)$. Починаючи з точки $(0,0)$ рухаємось у напрямку векторів. Точки через які ми проходимо утворюють послідовність.
 \paragraph{Метод 2}
@@ -137,9 +196,9 @@ after end axis/.code={
 \[{x_i-\overrightarrow{y_i} \over{{1\over2}n(n+1)-y_n}},\]
 де $\overrightarrow{y_i}$ це $y$-компонента вектора, що відповідає $i$-тому нуклеотиду при використанні методу 1, $n$ це розмір ДНК послідовності.
 \paragraph{Метод 3}
-Нуклеотидам A, G, C, T ставимо у відповідність вектори $(-1,0)$, $(1,0)$, $(0,1)$, $(0,-1)$. Починаємо з точки $(0,0)$ і рухаємось по відповідним векторам. Точки через які ми проходимо утворюють послідовність, причому точка стільки разів зустрічається у послідовності, скільки разів ми в неї потрапили.
+Нуклеотидам A, G, C, T ставимо у відповідність вектори $(-1,0)$, $(1,0)$, $(0,1)$, $(0,-1)$. Починаємо з точки $(0,0)$ і рухаємось по відповіднім векторам. Точки через які ми проходимо утворюють послідовність, причому точка стільки разів зустрічається у послідовності, скільки разів ми в неї потрапили.
 \paragraph{Метод 4}
-Розташовуємо нуклуотиди у вешинах квадрата зі стороною 1: A=$(0,0)$, G=$(1,1)$, C=$(0,1)$, T=$(1,0)$. Координати послідовності рахуються ітеративно, рухаючись на половину відстані між попередньою позицією і точкою квадрата, якій відповідає наступний нуклеотид у напрямку цієї точки. Ітеративну процедуру можна задати наступним чином:
+Розташовуємо нуклеотиди у вершинах квадрата зі стороною 1: A=$(0,0)$, G=$(1,1)$, C=$(0,1)$, T=$(1,0)$. Координати послідовності рахуються ітеративно, рухаючись на половину відстані між попередньою позицією і точкою квадрата, якій відповідає наступний нуклеотид у напрямку цієї точки. Ітеративну процедуру можна задати наступним чином:
 \[p_i = p_{i-1}-0.5(p_{i-1}-g_i)\]
 \[i=1,...,n; p_0=(0.5,0.5),\]
 де $g_i$ - координати, що відповідають $i$-тому нуклеотиду, $n$ - довжина послідовності ДНК.
@@ -153,10 +212,182 @@ after end axis/.code={
 \paragraph{Метод 7}
 Нуклеотидам A,C ставимо у відповідність $-1$, а нуклеотидам T,G ставимо у відповідність $1$. Починаючи з точки $0$ рухаємось ітеративно:
 \[p_i = p_{i-1} - {(g_i-p_{i-1}) \over{2}}sign(g_i)\]
-де $g_i$ число яке відвідає $i$-тому нуклеотиду. Тобто ми, подібно до методу 4, рухаємося на піввідстань до числа яке відповідає $i$-тому нуклеотиду.
+де $g_i$ число яке відвідає $i$-тому нуклеотиду. Тобто ми, подібно до методу 4, рухаємося на пів відстань до числа яке відповідає $i$-тому нуклеотиду.
+
+\subsection{$p$-статистики}
+
+
+Позначимо через $H$ гіпотезу про рівність неперервних функцій
+розподілу  $F_G(u)$ і $F_{G'}(u)$ генеральних сукупностей $G$ і $G'$ відповідно.
+Нехай $x=(x_1,...,x_n)\in G$ і $x'=(x_1',...,x_m')\in G'$, $x_{(1)}<...<x_{(n)}$, $x_{(1)}'<...<x_{(n)}'$ - порядкові статистики.
+Припустимо, що $F_G(u) = F_{G'}(u)$. Позначимо через $A_{ij}^{(k)}$, $k=1,2,..., m$
+випадкову подію, яка полягає в тому, що $x_k'$ потрапляє в інтервал  $\left(x_{(i)},x_{(j)}\right)$,
+тобто $A_{ij}^{(k)} = \left\{x_k' \in \left(x_{(i)}, x_{(j)}\right)\right\}$. Якщо $F_G(u) = F_{G'}(u)$ (тобто $G = G'$) імовірність
+цієї події обчислюється за формулою:
+\[P\left(A_{ij}^{(k)}\right) = P\left(x_k' \in \left(x_{(i)}, x_{(j)}\right)\right) = p_{ij}^{(n)} = {{j-i}\over{n+1}} = {{q}\over{n+1}}, q = j-i\]
+Покладемо
+\begin{equation}\label{eq:p1}
+p_{ij}^{(1)} = {{h_{ij}^{(n)}m+g^2/2-g\sqrt{h_{ij}^{(n)}(1-h)m+g^2/4}}\over{m+g^2}},
+\end{equation}
+\begin{equation}\label{eq:p2}
+p_{ij}^{(2)} = {{h_{ij}^{(n)}m+g^2/2+g\sqrt{h_{ij}^{(n)}(1-h)m+g^2/4}}\over{m+g^2}},
+\end{equation}
+де $h_{ij}^{(n)}$ — частота події $A_{ij}^{(n)}$
+в $m$ випробуваннях. Величина $g$ визначає
+рівень значущості довірчого інтервалу $I_{ij}^{(n,m)} = \left(p_{ij}^{(1)},p_{ij}^{(2)}\right)$; в силу правила $3\sigma$
+при $g=3$ рівень значущості цього інтервалу не перевищує $0.05$.
+\par
+Позначимо через $N$ кількість всіх довірчих інтервалів
+$I_{ij}^{(n,m)} = \left(p_{ij}^{(1)},p_{ij}^{(2)}\right)$ ($N=n(n-1)/2$) і $L$ -
+кількість тих інтервалів $I_{ij}^{(n,m)}$, які містять ймовірності $p_{ij}^{(n)}$. Покладемо $h^{(n,m)}=\rho \left(F^{*},{F^{*'}}\right) = \rho(x,x') = {L\over{N}}$.
+Оскільки $h^{(n,m)}$ –
+частота випадкової події $B=\left\{p_{ij}^{(n)} \in I_{ij}^{(n,m)}\right\}$, що має імовірність $p(B)=1-\beta$,
+то, покладаючи в формулі $h_{ij}^{(n,m)} = h^{(n)}, m = N$ і $g=3$ , ми отримаємо
+довірчий інтервал $I^{(n,m)} = \left(p^{(1)},p^{(2)}\right)$ для імовірності
+$p(B)$. Статистику $h^{(n)}$
+називатимемо $p$-статистикою. Вона є мірою близькості  $\rho(x,x')$ між вибірками
+$x$ і $x'$.
+
+\subsection{Модифікована $p$-статистика}
+%Тепер введемо поняття модифікованої $p$-статистики.\par
+Нехай $x=(x_1, x_2,...,x_n)$ — вибірка, отримана з генеральної
+сукупності $G$, що має функцію розподілу $F(u)$ , за допомогою простого
+випадкового вибору. Атомом вибірки $x$ будемо називати вибіркове
+значення $x_k$ , що зустрічається у вибірці $x$ більше одного разу:
+$x_k=x_{k_1}=...=x_{k_i}, k,k_1,...,k_i \in \{1,2,...,n\}$.
+Кратністю $t(x_k)$ довільного
+вибіркового значення $x_k$ називатимемо кількість його повторень у
+виборці $x$. Таким чином, атоми — це вибіркові значення, кратність яких
+перебільшує одиницю. \par
+Нехай $x_{(1)}\leq ... \leq x_{(n)}$ - варіаційний ряд вибірки $x$.
+Тоді згідно \cite{l7}:
+\begin{equation}\label{eq:p_ij}
+p_{ij}=p\left(A_{ij}\right)=p\left(x^{*} \in (x_{(i)}, x_{(j)})\right) \approx
+\gamma_i + \gamma_{i+1} + ... + \gamma_{j-1} + {{j-i}\over{n+1}},
+\end{equation}
+\[\gamma_{l} = \gamma \left(x_{(l)}\right) = {{t(x_{(k)})-1}\over{n+1}},\]
+де $x^{*}$ вибіркове значення із генеральної сукупності $G$ , що не
+залежить від вибірки $x$.\par
+
+Позначимо через $H$ гіпотезу про рівність неперервних функцій
+розподілу  $F_G(u)$ и $F_{G'}(u)$ генеральних сукупностей $G$ і $G'$ відповідно.
+Нехай $x=(x_1,...,x_n)\in G$ і $x'=(x_1',...,x_m')\in G'$, $x_{(1)} \leq ... \leq x_{(n)}$, $x_{(1)}' \leq ... \leq x_{(n)}'$ - порядкові статистики.
+Причому, вибірки $x$ і $x'$ містять атоми.
+Припустимо, що $F_G(u) = F_{G'}(u)$. Позначимо через $A_{ij}^{(k)}$, $k=1,2,..., m$
+випадкову подію, яка полягає в тому, що $x_k'$ потрапляє в інтервал  $\left(x_{(i)},x_{(j)}\right)$,
+тобто $A_{ij}^{(k)} = \left\{x_k' \in \left(x_{(i)}, x_{(j)}\right)\right\}$. Якщо $F_G(u) = F_{G'}(u)$ (тобто $G = G'$) імовірність
+цієї події обчислюється за формулою \ref{eq:p_ij}.\par
+За формулами \ref{eq:p1} і \ref{eq:p2} обчислюємо $p_{ij}^{(1)}$ і $p_{ij}^{(2)}$, відповідно.
+Позначимо через $N$ кількість всіх довірчих інтервалів
+$I_{ij}^{(n,m)} = \left(p_{ij}^{(1)},p_{ij}^{(2)}\right)$ ($N=n(n-1)/2$) і $L$ -
+кількість тих інтервалів $I_{ij}^{(n,m)}$, які містять ймовірності $p_{ij}^{(n)}$. Покладемо $h^{(n,m)}=\rho \left(F^{*},{F^{*'}}\right) = \rho(x,x') = {L\over{N}}$.
+Оскільки $h^{(n,m)}$ –
+частота випадкової події $B=\left\{p_{ij}^{(n)} \in I_{ij}^{(n,m)}\right\}$, що має імовірність $p(B)=1-\beta$,
+то, покладаючи в формулі $h_{ij}^{(n,m)} = h^{(n)}, m = N$ і $g=3$ , ми отримаємо
+довірчий інтервал $I^{(n,m)} = \left(p^{(1)},p^{(2)}\right)$ для імовірності
+$p(B)$. Статистику $h^{(n)}$ називатимемо модифікованою $p$-статистикою.
+
+
+\subsection{Еліпсоїд Петуніна}
+Розглянемо множину двовимірних точок $M_n$:
+\[M_n = \left\{\overrightarrow{x_1},...,\overrightarrow{x_n}\right\},
+де \overrightarrow{x_i} = (x_i, y_i)\]
+
+\begin{figure}[h!]
+\centering
+\includegraphics[width=0.65\textwidth]{pet1}
+\caption{Прямокутник Петуніна}
+\label{fig:pet1}
+\end{figure}
+
+Побудуємо опуклу оболонку точок $M_n = \left\{(x_1,y_1),...,(x_n,y_n)\right\}$.
+Знайдемо вершини опуклої оболонки $(x_k,y_k)$ і $(x_l,y_l)$,
+які лежать на діаметрі опуклої оболонки,
+тобто найбільш віддалені одна від одної вершини.
+З’єднаємо точки $(x_k,y_k)$ і $(x_l,y_l)$ відрізком $L$.
+Знайдемо вершини $(x_r,y_r)$ і $(x_q,y_q)$ опуклої оболонки
+найбільш віддалені від $L$.
+З’єднаємо точки $(x_r,y_r)$ і $(x_q,y_q)$ відрізками паралельними
+$L_1$ і $L_2$, паралельними відрізку $L$.
+Проведемо через точки $(x_k,y_k)$ і $(x_l,y_l)$ відрізки $L_3$ і $L_4$,
+перпендикулярно до відрізка $L$. Перетин відрізків $L_1$, $L_2$, $L_3$ і $L_4$
+утворюють прямокутник $\Pi$, сторони якого мають довжину $a$ і $b$.(Рис.
+\ref{fig:pet1})
+\par
+
+Будемо вважати, що $a \leq b$. Переведемо лівий нижній кут прямокутника у
+початок нової системи координат з осями $Ox'$ і $Oy'$ за допомогою паралельного
+переносу і повороту. Точки $(x_1,y_1), (x_2,y_2),...,(x_n,y_n)$ перейдуть в
+точки$(x_1',y_1'), (x_2',y_2'),...,(x_n',y_n')$. Відобразимо точки
+$(x_1',y_1'), (x_2',y_2'),...,(x_n',y_n')$ в точки $(\alpha x_1',y_1'), (\alpha
+x_2',y_2'),...,(\alpha x_n',y_n')$, де $\alpha = {a\over{b}}$. В результаті
+отримаємо сукупність точок, які належать квадрату $S$. \par
+
+Порахуємо центр $(x_0',y_0')$ квадрата $S$ і знайдемо відстані
+$r_1,r_2,...,r_n$ від нього до кожної точки $(\alpha x_1',y_1'), (\alpha
+x_2',y_2'),...,(\alpha x_n',y_n')$. Найбільше число $R=max(r_1,r_2,...,r_n)$
+визначає круг з центром у точці $(x_0',y_0')$ і радіусом $R$.\par
+В результаті всі
+точки $(\alpha x_1',y_1'), (\alpha x_2',y_2'),...,(\alpha x_n',y_n')$ всередині
+круга з радіусом $R$. Розтягуючи цей круг вздовж осі $Ox'$ з коефіцієнтом
+$\beta={1\over \alpha}$ і виконуючи обернені перетворення повороту і переносу,
+отримаємо еліпс Петуніна (Рис. \ref{fig:pet2}).\par
+
+\begin{figure}[h!]
+\centering
+\includegraphics[width=0.75\textwidth]{pet2}
+\caption{Побудова еліпса Петуніна}
+\label{fig:pet2}
+\end{figure}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[width=0.5\textwidth]{pet3}
+\caption{Вкладені еліпси Петуніна}
+\label{fig:pet3}
+\end{figure}
+
+У $m$-вимірному просторі на першому кроці знайдемо вершини опуклої оболонки
+$\overrightarrow{x_k}$ і $\overrightarrow{x_l}$, що лежать на діаметрі випуклої
+оболонки. З’єднаємо точки $\overrightarrow{x_k}$ і $\overrightarrow{x_l}$
+відрізком $L$. Повернемо і перенесемо систему координат, щоб діаметр опуклої
+оболонки лежав на осі $Ox_1'$. Побудуємо найменший прямокутний паралелепіпед,
+що містить точки $\overrightarrow{x_1},...,\overrightarrow{x_n}$.
+\par
+
+Зжимаючи прямокутний паралелепіпед, Відобразимо точки у гіперкуб. Знайдемо
+центр $\overrightarrow{x_0}$ гіперкуба і порахуємо відстані $r_1,r_2,...,r_n$
+від нього до кожної точки. Знайдемо найбільше число $R=max(r_1,r_2,...,r_n)$ і
+побудуємо гіперкулю з центром в точці $\overrightarrow{x_0}$ і радіусом $R$.
+Застосовуючи до цієї гіперкулі обернені операції розтягування, повороту і
+переносу, отримаємо еліпсоїд Петуніна в $m$-вимірному просторі.
+\par
+
+Якщо побудувати серію вбудованих еліпсоїдів, то на кожному з них буде лежати по одній точці, тобто відбувається їх ранжування (Рис. \ref{fig:pet3}).
 
 \par
-Введемо означення $p$-статистики.
+
+При побудові $p$-статистики варіаційному ряду вибірок
+$\overrightarrow{x}_{(1)} \preceq \overrightarrow{x}_{(2)} \preceq
+... \preceq \overrightarrow{x}_{(n)}$ поставимо у відповідність послідовність
+вкладених еліпсоїдів $E_{(1)} \subset E_{(2)} \subset ... \subset E_{(n)}$. Ймовірність того, що елемент $\overrightarrow{x}$ із генеральної сукупності $G$ задовольняє умові $\overrightarrow{x}_{(i)} \preceq \overrightarrow{x} \preceq
+\overrightarrow{x}_{(j)}$, рівна ймовірності потрапити між еліпсами $E_{(i)}$ і $E_{(j)}$, тобто $j-i \over n+1$. Ця умова дозволяє побудувати $p$-статистику для багатовимірного випадку. \par
+Таким чином будуємо $p$-статистику як завжди, тільки подія $A_{ij}^{(k)}$ буде полягати в тому, що $x_k'$ попаде в область $E_{(j)} \setminus E_{(i)}$.
+
+\newpage
+
+\section{Результати}
+Нижче представлені результати застосування одного з методів числового представлення ДНК і $p$-статистик.\par
+В таблицях представлені результати, порівнюючи послідовностей ДНК джунглевих
+кур(gallus), пацюка(rat), кролика(rabbit), людини(human), качки(duck) і
+горили(gorilla).\par
+Геномні послідовності були взяті з ГенБанку (www.ncbi.nlm.nih.gov/genbank/):\par
+(gi|126165289|ref|NM\_001081704.1| Gallus gallus hemoglobin, beta (HBE), mRNA),\par
+rat(gi|56251|emb|X06701.1| Rat beta-globin gene),\par
+rabbit(gi|1489|emb|V00882.1| Rabbit (O. cuniculus) gene for beta-globin),\par
+human(gi|34190730|gb|BC047343.2| Homo sapiens cDNA clone IMAGE:5177205),\par
+duck(gi|483525371|gb|KB742400.1| Anas platyrhynchos breed Pekin duck unplaced genomic scaffold scaffold30, whole genome shotgun sequence),\par
+gorilla(gi|401612384|ref|NW\_004008464.1| Gorilla gorilla gorilla unplaced genomic scaffold, gorGor3.1 Primary Assembly unplaced10718\_1\_913, whole genome shotgun sequence)\par
 
 \newpage
 \begin{table}[h!]
@@ -164,15 +395,15 @@ after end axis/.code={
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
 - & gallus & rat & rabbit & human & duck & gorilla \\ \hline
-gallus & - & 0.0089988408 & 0.0089988408 & 0.0045045045 & 0.0136456999 & 0.0181095317 \\ \hline
-rat & - & - & 0.0086907785 & 0.0063312938 & 0.0079739443 & 0.0087959493 \\ \hline
-rabbit & - & - & - & 0.0061880905 & 0.0099620119 & 0.0110009416 \\ \hline
-human & - & - & - & - & 0.0059523810 & 0.0044147883 \\ \hline
-duck & - & - & - & - & - & 0.0175438596 \\ \hline
+gallus & - & 0.0089988408 & 0.00899884 & 0.00450450 & 0.01364569 & 0.01810953 \\ \hline
+rat & - & - & 0.00869077 & 0.00633129 & 0.00797394 & 0.00879594 \\ \hline
+rabbit & - & - & - & 0.00618809 & 0.00996201 & 0.01100094 \\ \hline
+human & - & - & - & - & 0.00595238 & 0.00441478 \\ \hline
+duck & - & - & - & - & - & 0.01754385 \\ \hline
 gorilla & - & - & - & - & - & - \\ \hline
 \end{tabular}
 \end{center}
-\caption{Результати $p$-статистик при представленні ДНК методом 1}
+\caption{$p$-статистики при представленні ДНК методом 1}
 \label{table:res1}
 \end{table}
 
@@ -181,32 +412,34 @@ gorilla & - & - & - & - & - & - \\ \hline
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
 - & gallus & rat & rabbit & human & duck & gorilla \\ \hline
-gallus & - & 0.0322127997 & 0.0389644724 & 0.0177028044 & 0.0763528766 & 0.0923169219 \\ \hline
-rat & - & - & 0.3029869070 & 0.0778903070 & 0.0667766113 & 0.0595756231 \\ \hline
-rabbit & - & - & - & 0.0591540274 & 0.0938588610 & 0.0801315309 \\ \hline
-human & - & - & - & - & 0.0356433537 & 0.0317225841 \\ \hline
-duck & - & - & - & - & - & 0.7232590650 \\ \hline
+gallus & - & 0.0322127997 & 0.03896447 & 0.01770280 & 0.07635287 & 0.09231692 \\ \hline
+rat & - & - & 0.30298690 & 0.07789030 & 0.06677661 & 0.05957562 \\ \hline
+rabbit & - & - & - & 0.05915402 & 0.09385886 & 0.08013153 \\ \hline
+human & - & - & - & - & 0.03564335 & 0.03172258 \\ \hline
+duck & - & - & - & - & - & 0.72325906 \\ \hline
 gorilla & - & - & - & - & - & - \\ \hline
 \end{tabular}
 \end{center}
-\caption{Результати $p$-статистик при представленні ДНК методом 2}
+\caption{$p$-статистики при представленні ДНК методом 2}
 \label{table:res2}
 \end{table}
+
+\newpage
 
 \begin{table}[h!]
 \begin{center}
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
 - & gallus & rat & rabbit & human & duck & gorilla \\ \hline
-gallus & - & 0.0183905103 & 0.0183905103 & 0.0092165899 & 0.0275217614 & 0.0404505888 \\ \hline
-rat & - & - & 0.0339273529 & 0.0100363808 & 0.0204493793 & 0.0182021462 \\ \hline
-rabbit & - & - & - & 0.0105030456 & 0.0204493793 & 0.0182021462 \\ \hline
-human & - & - & - & - & 0.0082051022 & 0.0091219711 \\ \hline
-duck & - & - & - & - & - & 0.0317440415 \\ \hline
+gallus & - & 0.0183905103 & 0.01839051 & 0.00921658 & 0.02752176 & 0.04045058 \\ \hline
+rat & - & - & 0.03392735 & 0.01003638 & 0.02044937 & 0.01820214 \\ \hline
+rabbit & - & - & - & 0.01050304 & 0.02044937 & 0.01820214 \\ \hline
+human & - & - & - & - & 0.00820510 & 0.00912197 \\ \hline
+duck & - & - & - & - & - & 0.03174404 \\ \hline
 gorilla & - & - & - & - & - & - \\ \hline
 \end{tabular}
 \end{center}
-\caption{Результати $p$-статистик при представленні ДНК методом 3}
+\caption{$p$-статистики при представленні ДНК методом 3}
 \label{table:res3}
 \end{table}
 
@@ -215,32 +448,34 @@ gorilla & - & - & - & - & - & - \\ \hline
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
 - & gallus & rat & rabbit & human & duck & gorilla \\ \hline
-gallus & - & 0.2065361072 & 0.2012181482 & 0.1847253574 & 0.2825737702 & 0.3246090334 \\ \hline
-rat & - & - & 0.1543751287 & 0.1288092140 & 0.2209592377 & 0.2054197652 \\ \hline
-rabbit & - & - & - & 0.1297989157 & 0.2198026513 & 0.2122557215 \\ \hline
-human & - & - & - & - & 0.1649465645 & 0.1627058473 \\ \hline
-duck & - & - & - & - & - & 0.2219235795 \\ \hline
+gallus & - & 0.2065361072 & 0.20121814 & 0.18472535 & 0.28257377 & 0.32460903 \\ \hline
+rat & - & - & 0.15437512 & 0.12880921 & 0.22095923 & 0.20541976 \\ \hline
+rabbit & - & - & - & 0.12979891 & 0.21980265 & 0.21225572 \\ \hline
+human & - & - & - & - & 0.16494656 & 0.16270584 \\ \hline
+duck & - & - & - & - & - & 0.22192357 \\ \hline
 gorilla & - & - & - & - & - & - \\ \hline
 \end{tabular}
 \end{center}
-\caption{Результати $p$-статистик при представленні ДНК методом 4}
+\caption{$p$-статистики при представленні ДНК методом 4}
 \label{table:res4}
 \end{table}
+
+\newpage
 
 \begin{table}[h!]
 \begin{center}
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
 - & gallus & rat & rabbit & human & duck & gorilla \\ \hline
-gallus & - & 0.0089988408 & 0.0090191772 & 0.0045045045 & 0.0136660362 & 0.0182112135 \\ \hline
-rat & - & - & 0.0087677960 & 0.0063517816 & 0.0080054696 & 0.0088199689 \\ \hline
-rabbit & - & - & - & 0.0062018164 & 0.0099974780 & 0.0110081474 \\ \hline
-human & - & - & - & - & 0.0059464699 & 0.0044604254 \\ \hline
-duck & - & - & - & - & - & 0.0175870948 \\ \hline
+gallus & - & 0.0089988408 & 0.00901917 & 0.00450450 & 0.01366603 & 0.01821121 \\ \hline
+rat & - & - & 0.00876779 & 0.00635178 & 0.00800546 & 0.00881996 \\ \hline
+rabbit & - & - & - & 0.00620181 & 0.00999747 & 0.01100814 \\ \hline
+human & - & - & - & - & 0.00594646 & 0.00446042 \\ \hline
+duck & - & - & - & - & - & 0.01758709 \\ \hline
 gorilla & - & - & - & - & - & - \\ \hline
 \end{tabular}
 \end{center}
-\caption{Результати $p$-статистик при представленні ДНК методом 5}
+\caption{$p$-статистики при представленні ДНК методом 5}
 \label{table:res5}
 \end{table}
 
@@ -249,61 +484,46 @@ gorilla & - & - & - & - & - & - \\ \hline
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
 - & gallus & rat & rabbit & human & duck & gorilla \\ \hline
-gallus & - & 0.4182884917 & 0.4678787139 & 0.1844203120 & 0.3520936286 & 0.4649299412 \\ \hline
-rat & - & - & 0.9950007244 & 0.3445051081 & 0.5063503885 & 0.4353371079 \\ \hline
-rabbit & - & - & - & 0.3716224769 & 0.5287530934 & 0.6094445086 \\ \hline
-human & - & - & - & - & 0.8111966236 & 0.3886802627 \\ \hline
-duck & - & - & - & - & - & 0.4954142354 \\ \hline
+gallus & - & 0.4182884917 & 0.46787871 & 0.18442031 & 0.35209362 & 0.46492994 \\ \hline
+rat & - & - & 0.99500072 & 0.34450510 & 0.50635038 & 0.43533710 \\ \hline
+rabbit & - & - & - & 0.37162247 & 0.52875309 & 0.60944450 \\ \hline
+human & - & - & - & - & 0.81119662 & 0.38868026 \\ \hline
+duck & - & - & - & - & - & 0.49541423 \\ \hline
 gorilla & - & - & - & - & - & - \\ \hline
 \end{tabular}
 \end{center}
-\caption{Результати $p$-статистик при представленні ДНК методом 6}
+\caption{$p$-статистики при представленні ДНК методом 6}
 \label{table:res6}
 \end{table}
+
+\newpage
 
 \begin{table}[h!]
 \begin{center}
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
 - & gallus & rat & rabbit & human & duck & gorilla \\ \hline
-gallus & - & 0.5980314400 & 0.5698554085 & 0.9071339963 & 0.8885668965 & 0.9481829459 \\ \hline
-rat & - & - & 0.9977794554 & 0.5604684515 & 0.3972293154 & 0.4013302012 \\ \hline
-rabbit & - & - & - & 0.4224342110 & 0.3800282940 & 0.3785981246 \\ \hline
-human & - & - & - & - & 0.5981285762 & 0.7745263350 \\ \hline
-duck & - & - & - & - & - & 0.9520161988 \\ \hline
+gallus & - & 0.59803144 & 0.56985540 & 0.90713399 & 0.88856689 & 0.94818294 \\ \hline
+rat & - & - & 0.99777945 & 0.56046845 & 0.39722931 & 0.40133020 \\ \hline
+rabbit & - & - & - & 0.42243421 & 0.38002829 & 0.37859812 \\ \hline
+human & - & - & - & - & 0.59812857 & 0.77452633 \\ \hline
+duck & - & - & - & - & - & 0.95201619 \\ \hline
 gorilla & - & - & - & - & - & - \\ \hline
 \end{tabular}
 \end{center}
-\caption{Результати $p$-статистик при представленні ДНК методом 7}
+\caption{$p$-статистики при представленні ДНК методом 7}
 \label{table:res7}
 \end{table}
 
+\newpage
+\section{Висновки}
+Довжина послідовностей ДНК досягає $10^5$, а запропоновані алгоритми будують
+послідовності довжини яких пропорційні довжині вхідної послідовності. Алгоритм
+побудови $p$-статистики досить повільний і не може мати практичного
+застосування при довжині вибірки $ > 10^4$, або прискорення самого алгоритму.
+Через це, методи порівняння геномних послідовностей, які були тут розглянуті
+можуть мати практичне значення лише для відносно коротких послідовностей ДНК.
 
-Позначимо через H гіпотезу про рівність неперервних функцій
-розподілу  генеральних сукупностей G и G відповідно.
-Нехай
-порядкові статистики, де G і G  — емпіричні генеральні сукупності,
-породжені гіпотетичними генеральними сукупностями G и G.
-Припустимо, що F G ( u ) = F G ( u ) . Позначимо через A ij ( k ) , k  1,2,..., m
-випадкову подію, яка полягає в тому, що x  k  потрапляє в інтервал  x  ( i ) , x  ( j )  ,
-
-
-тобто A ij ( k ). Якщо F G ( u ) = F G  ( u ) (тобто G  G  ) імовірність
-цієї події обчислюється за формулою (9).Вісник Київського університету
-Покладемо
-де h ij ( n ) — частота події A ij ( n )
-в m випробуваннях. Величина g визначає
-рівень значущості довірчого інтервалу I ij ( n , m ) 
-при g =3 рівень значущості цього інтервалу не перевищує 0,05.
-I ij ( n , m )
-Позначимо через N кількість всіх довірчих інтервалів
-. Оскільки h ( n , m ) –
-частота випадкової події B  p ij  , що має імовірність p ( B )  ,
-містять імовірності p ij ( n ) . Покладемо h ( n , m ) , x 
-то, покладаючи в формулі (11) h ij ( n , m )  h ( n ) , m  N і g  3 , ми отримаємо
-довірчий інтервал I ( n , m )  p (1) , p (2)  для імовірності p ( B ) . Статистику h ( n )
-називатимемо модифікованою p-статистикою. Вона є шуканою мірою
-близькості  x  , x між виборками x  и x  .
 
 \newpage
 \begin{thebibliography}{9}
