add small presentation

--- a/Dipl/text/dipl.tex
+++ b/Dipl/text/dipl.tex
@@ -190,15 +190,26 @@ $-1$.
 \subsection{Методи числового подання ДНК}
 
 \paragraph{Метод 1}
-Кожному нуклеотиду A, G, C, T ставимо у відповідність вектори $(1,0.8)$, $(1,0.6)$, $(1,0.4)$, $(1,0.2)$. Починаючи з точки $(0,0)$ рухаємось у напрямку векторів. Точки через які ми проходимо утворюють послідовність.
+Кожному нуклеотиду A, G, C, T ставимо у відповідність вектори $(1,0.8)$,
+$(1,0.6)$, $(1,0.4)$, $(1,0.2)$. Починаючи з точки $(0,0)$ рухаємось у напрямку
+векторів. Точки через які ми проходимо утворюють послідовність.
 \paragraph{Метод 2}
-Спочатку використаємо попередній метод щоб отримати числову послідовність $(x_i,y_i)$. Далі використаємо наступну формулу для обчислення результуючої послідовності:
+Спочатку використаємо попередній метод щоб отримати числову послідовність
+$(x_i,y_i)$. Далі використаємо наступну формулу для обчислення результуючої
+послідовності:
 \[{x_i-\overrightarrow{y_i} \over{{1\over2}n(n+1)-y_n}},\]
 де $\overrightarrow{y_i}$ це $y$-компонента вектора, що відповідає $i$-тому нуклеотиду при використанні методу 1, $n$ це розмір ДНК послідовності.
 \paragraph{Метод 3}
-Нуклеотидам A, G, C, T ставимо у відповідність вектори $(-1,0)$, $(1,0)$, $(0,1)$, $(0,-1)$. Починаємо з точки $(0,0)$ і рухаємось по відповіднім векторам. Точки через які ми проходимо утворюють послідовність, причому точка стільки разів зустрічається у послідовності, скільки разів ми в неї потрапили.
+Нуклеотидам A, G, C, T ставимо у відповідність вектори $(-1,0)$, $(1,0)$,
+$(0,1)$, $(0,-1)$. Починаємо з точки $(0,0)$ і рухаємось по відповіднім
+векторам. Точки через які ми проходимо утворюють послідовність, причому точка
+стільки разів зустрічається у послідовності, скільки разів ми в неї потрапили.
 \paragraph{Метод 4}
-Розташовуємо нуклеотиди у вершинах квадрата зі стороною 1: A=$(0,0)$, G=$(1,1)$, C=$(0,1)$, T=$(1,0)$. Координати послідовності рахуються ітеративно, рухаючись на половину відстані між попередньою позицією і точкою квадрата, якій відповідає наступний нуклеотид у напрямку цієї точки. Ітеративну процедуру можна задати наступним чином:
+Розташовуємо нуклеотиди у вершинах квадрата зі стороною 1: A=$(0,0)$,
+G=$(1,1)$, C=$(0,1)$, T=$(1,0)$. Координати послідовності рахуються ітеративно,
+рухаючись на половину відстані між попередньою позицією і точкою квадрата, якій
+відповідає наступний нуклеотид у напрямку цієї точки. Ітеративну процедуру
+можна задати наступним чином:
 \[p_i = p_{i-1}-0.5(p_{i-1}-g_i)\]
 \[i=1,...,n; p_0=(0.5,0.5),\]
 де $g_i$ - координати, що відповідають $i$-тому нуклеотиду, $n$ - довжина послідовності ДНК.
